change module name

--- a/_includes/components/trackingAndAnalytics.njk
+++ b/_includes/components/trackingAndAnalytics.njk
@@ -78,6 +78,6 @@ const digitalData = {
     // adobeAnalyticsObjectName: 'customAdobeObjectName'
   }
 
-  ac('load', 'autotrackAdobeAnalytics', config );
+  ac('load', 'adobeAnalyticsAutotrackOfferStateChanges', config );
 
 </script>
