--- a/_includes/components/trackingAndAnalytics.njk
+++ b/_includes/components/trackingAndAnalytics.njk
@@ -1,26 +1,3 @@
-<!-- Data Layer to enable rich data collection and targeting -->
-<script>
-const digitalData = {
-    "page": {
-        "pageInfo" : {
-            "pageName": document.title
-            }
-        }
-};
-</script>
-
-<!-- Data Layer -->
-<!-- jQuery -->
-<!-- prehiding snippet for Adobe Target with asynchronous Launch deployment -->
-<script>
-  (function(g,b,d,f){(function(a,c,d){if(a){var e=b.createElement("style");e.id=c;e.innerHTML=d;a.appendChild(e)}})(b.getElementsByTagName("head")[0],"at-body-style",d);setTimeout(function(){var a=b.getElementsByTagName("head")[0];if(a){var c=b.getElementById("at-body-style");c&&a.removeChild(c)}},f)})(window,document,"body {opacity: 0 !important}",3E3);
-</script>
-
-<!-- prehiding snippet for Adobe Target with asynchronous Launch deployment -->
-<!-- Launch Header Embed Code: PROD -->
-<script src="//assets.adobedtm.com/645cdc4519e1/f7ca60ac2e35/launch-aa24954aa620.min.js" async></script>
-
-<!-- Launch Header Embed Code -->
 <!-- Grab the widgets we need -->
 <script type="text/javascript">
   window._genesys = {
@@ -42,24 +19,9 @@ const digitalData = {
       }
     }
   };
-  /* customPlugin;
-
-  window.setupWidgetListeners = function() {
-      customPlugin = CXBus.registerPlugin('Custom');
-
-    customPlugin.subscribe('WebChatService.started', function (e) {
-      console.log('Chat started', e);
-    });
-
-    customPlugin.subscribe('WebChatService.ended', function (e) {
-      console.log('Chat ended', e);
-    });
-  }; */
 </script>
 
 <script src="https://apps.mypurecloud.com/widgets/9.0/cxbus.min.js" onload="javascript:CXBus.configure({debug:false,pluginsPath:'https://apps.mypurecloud.com/widgets/9.0/plugins/'}); CXBus.loadPlugin('widgets-core');"></script>
-
-<!--  <script>window.setupWidgetListeners();</script> -->
 
 <script>
   const sdkTimeMachine = 'GPE-7995_sdk-adobe-analytics-track-module/';
@@ -81,3 +43,33 @@ const digitalData = {
   ac('load', 'autotrackOfferStateChangesInAdobeAnalytics', config );
 
 </script>
+
+<!-- Data Layer to enable rich data collection and targeting -->
+<script>
+const digitalData = {
+    "page": {
+        "pageInfo" : {
+            "pageName": document.title
+            }
+        }
+};
+</script>
+
+<!-- Data Layer -->
+<!-- jQuery -->
+<!-- prehiding snippet for Adobe Target with asynchronous Launch deployment -->
+<script>
+  (function(g,b,d,f){(function(a,c,d){if(a){var e=b.createElement("style");e.id=c;e.innerHTML=d;a.appendChild(e)}})(b.getElementsByTagName("head")[0],"at-body-style",d);setTimeout(function(){var a=b.getElementsByTagName("head")[0];if(a){var c=b.getElementById("at-body-style");c&&a.removeChild(c)}},f)})(window,document,"body {opacity: 0 !important}",3E3);
+</script>
+
+<!-- prehiding snippet for Adobe Target with asynchronous Launch deployment -->
+<!-- Launch Header Embed Code: PROD -->
+<script src="//assets.adobedtm.com/645cdc4519e1/f7ca60ac2e35/launch-aa24954aa620.min.js"></script>
+
+<!-- Launch Header Embed Code -->
+
+
+
+
+
+
