--- a/_includes/components/trackingAndAnalytics.njk
+++ b/_includes/components/trackingAndAnalytics.njk
@@ -6,8 +6,8 @@
         transport: {
           type: 'purecloud-v2-sockets',
           dataURL: 'https://api.inintca.com',
-          deploymentKey : '5d0f39f0-5f81-4051-be70-837bc6ff8636',
-          orgGuid : '3d943ccc-9000-47c2-82e3-0044a94c11de',
+          deploymentKey: '5d0f39f0-5f81-4051-be70-837bc6ff8636',
+          orgGuid: '3d943ccc-9000-47c2-82e3-0044a94c11de',
           interactionData: {
             routing: {
               targetType: 'QUEUE',
@@ -21,18 +21,21 @@
   };
 </script>
 
-<script src="https://apps.mypurecloud.com/widgets/9.0/cxbus.min.js" onload="javascript:CXBus.configure({debug:false,pluginsPath:'https://apps.mypurecloud.com/widgets/9.0/plugins/'}); CXBus.loadPlugin('widgets-core');"></script>
+<script src="https://apps.mypurecloud.com/widgets/9.0/cxbus.min.js"
+  onload="javascript:CXBus.configure({debug:false,pluginsPath:'https://apps.mypurecloud.com/widgets/9.0/plugins/'}); CXBus.loadPlugin('widgets-core');"></script>
 
 <script>
-  const sdkTimeMachine = 'GPE-7995_sdk-adobe-analytics-track-module/';
+  const sdkTimeMachine = 'GPE-7996_add-content-offer-support-to-adobe-module/';
 
-  (function(a,t,c,l,o,u,d){a['_genesysJourneySdk']=o;a[o]=a[o]||function(){
-  (a[o].q=a[o].q||[]).push(arguments)},a[o].l=1*new Date();u=t.createElement(c),
-  d=t.getElementsByTagName(c)[0];u.async=1;u.src=l;u.charset='utf-8';d.parentNode.insertBefore(u,d)
+  (function (a, t, c, l, o, u, d) {
+    a['_genesysJourneySdk'] = o; a[o] = a[o] || function () {
+      (a[o].q = a[o].q || []).push(arguments)
+    }, a[o].l = 1 * new Date(); u = t.createElement(c),
+      d = t.getElementsByTagName(c)[0]; u.async = 1; u.src = l; u.charset = 'utf-8'; d.parentNode.insertBefore(u, d)
   })(window, document, 'script', `https://apps.inintca.com/journey/sdk/${sdkTimeMachine}js/web/v1/ac.js`, 'ac');
 
   ac('init', '3d943ccc-9000-47c2-82e3-0044a94c11de', { environment: 'test' });
-  
+
   ac('pageview');
 
   const config = {
@@ -40,26 +43,26 @@
     // adobeAnalyticsObjectName: 'customAdobeObjectName'
   }
 
-  ac('load', 'autotrackOfferStateChangesInAdobeAnalytics', config );
+  ac('load', 'autotrackOfferStateChangesInAdobeAnalytics', config);
 
 </script>
 
 <!-- Data Layer to enable rich data collection and targeting -->
 <script>
-const digitalData = {
+  const digitalData = {
     "page": {
-        "pageInfo" : {
-            "pageName": document.title
-            }
-        }
-};
+      "pageInfo": {
+        "pageName": document.title
+      }
+    }
+  };
 </script>
 
 <!-- Data Layer -->
 <!-- jQuery -->
 <!-- prehiding snippet for Adobe Target with asynchronous Launch deployment -->
 <script>
-  (function(g,b,d,f){(function(a,c,d){if(a){var e=b.createElement("style");e.id=c;e.innerHTML=d;a.appendChild(e)}})(b.getElementsByTagName("head")[0],"at-body-style",d);setTimeout(function(){var a=b.getElementsByTagName("head")[0];if(a){var c=b.getElementById("at-body-style");c&&a.removeChild(c)}},f)})(window,document,"body {opacity: 0 !important}",3E3);
+  (function (g, b, d, f) { (function (a, c, d) { if (a) { var e = b.createElement("style"); e.id = c; e.innerHTML = d; a.appendChild(e) } })(b.getElementsByTagName("head")[0], "at-body-style", d); setTimeout(function () { var a = b.getElementsByTagName("head")[0]; if (a) { var c = b.getElementById("at-body-style"); c && a.removeChild(c) } }, f) })(window, document, "body {opacity: 0 !important}", 3E3);
 </script>
 
 <!-- prehiding snippet for Adobe Target with asynchronous Launch deployment -->
@@ -67,9 +70,3 @@ const digitalData = {
 <script src="//assets.adobedtm.com/645cdc4519e1/f7ca60ac2e35/launch-aa24954aa620.min.js"></script>
 
 <!-- Launch Header Embed Code -->
-
-
-
-
-
-
