--- a/_includes/components/trackingAndAnalytics.njk
+++ b/_includes/components/trackingAndAnalytics.njk
@@ -25,14 +25,12 @@
   onload="javascript:CXBus.configure({debug:false,pluginsPath:'https://apps.mypurecloud.com/widgets/9.0/plugins/'}); CXBus.loadPlugin('widgets-core');"></script>
 
 <script>
-  const sdkTimeMachine = 'GPE-7996_add-content-offer-support-to-adobe-module/';
-
   (function (a, t, c, l, o, u, d) {
     a['_genesysJourneySdk'] = o; a[o] = a[o] || function () {
       (a[o].q = a[o].q || []).push(arguments)
     }, a[o].l = 1 * new Date(); u = t.createElement(c),
       d = t.getElementsByTagName(c)[0]; u.async = 1; u.src = l; u.charset = 'utf-8'; d.parentNode.insertBefore(u, d)
-  })(window, document, 'script', `https://apps.inintca.com/journey/sdk/${sdkTimeMachine}js/web/v1/ac.js`, 'ac');
+  })(window, document, 'script', `https://apps.inintca.com/journey/sdk/js/web/v1/ac.js`, 'ac');
 
   ac('init', '3d943ccc-9000-47c2-82e3-0044a94c11de', { environment: 'test' });
 
