remove skd module config

--- a/_includes/components/trackingAndAnalytics.njk
+++ b/_includes/components/trackingAndAnalytics.njk
@@ -36,12 +36,7 @@
 
   ac('pageview');
 
-  const config = {
-    // if not specified, module should fallback to what adobe sets as default - window.s
-    // adobeAnalyticsObjectName: 'customAdobeObjectName'
-  }
-
-  ac('load', 'autotrackOfferStateChangesInAdobeAnalytics', config);
+  ac('load', 'autotrackOfferStateChangesInAdobeAnalytics');
 
 </script>
 
